# CSC-345-Code

./: .gitignore  README.md
Craft3e-0.2.0.2/: Craft3e.cabal  FirstScript.hs  PicturesSVG.hs  Test.hs  refresh.html  svgOut.xml
Craft3e-0.2.0.2/Calculator/: CalcParseLib.hs
Craft3e-0.2.0.2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
InClass/: WarStarter.hs
applications/: hellouser.hs  quiz.hs  quotes.hs  quotes_prof.hs  readfile.hs  triangle.hs
applications/Adventofcode_2015/: q1_a.hs  q1_b.hs
applications/gloss/: glossInClass.cabal  shapes.hs
csc345-hw0-FreyaGlick/: Prog0.hs  Prog0Tests.hs  README.md
csc345-hw1-FreyaGlick/: Prog1.hs  Prog1Tests.hs  README.md
csc345-hw2-FreyaGlick/: Prog2.hs  Prog2Tests.hs  README.md
csc345-hw3-FreyaGlick/: Prog3.hs  Prog3Tests.hs  README.md
csc345-hw4-FreyaGlick/: Prog4.hs  Prog4Tests.hs  README.md
csc345-hw5-FreyaGlick/: Prog5.hs  Prog5Tests.hs  README.md
csc345-hw6-FreyaGlick/: CountLetters.hs  Prog6.hs  Prog6Tests.hs  README.md  Range.hs
csc345-hw7-FreyaGlick/: Prog7.hs  Prog7Tests.hs  README.md
