
name: Craft3e
version: 0.2.0.2
license: MIT
license-file: LICENSE
copyright: (c) Addison Wesley
author: Simon Thompson
maintainer: Simon Thompson <s.j.thompson@kent.ac.uk>
bug-reports: mailto:s.j.thompson@kent.ac.uk
stability: stable
homepage: http://www.haskellcraft.com/
synopsis: Code for Haskell: the Craft of Functional Programming, 3rd ed.
category: Education
cabal-version: >= 1.10
build-type: Simple
description:
  .
  Use as follows:
  .
  1. Download via: @cabal unpack Craft3e@
  .
  2. Go to directory: @cd Craft3e-<version>@
  .
  3. Install dependencies: @cabal install --disable-documentation@

extra-source-files:
  README.txt
  black.jpg
  white.jpg
  red.jpg
  blue.jpg
  blk_horse_head.jpg
  svgOut.xml
  showPic.html
  refresh.html

library
  default-language: Haskell2010
  build-depends:
    base >= 4.9.0.0 && < 5,
    QuickCheck >= 2.1 && < 3,
    old-locale == 1.0.*,
    time >= 1.1 && < 2.0,
    mtl >= 1.1 && < 2.3,
    HUnit >= 1.2.0,
    open-browser >= 0.1.0.0 && < 0.5.0.0
  
  exposed-modules:
    Chapter1
    Chapter10
    Chapter11
    Chapter12
    Chapter13
    Chapter14_1
    Chapter14_2
    Chapter17
    Chapter18
    Chapter2
    Chapter20
    Chapter3
    Chapter4
    Chapter5
    Chapter6
    Chapter7
    Chapter8
    Chapter9
    FirstScript
    Index
    ParseLib
    ParsingBasics
    Pic
    Pictures
    PicturesSVG
    QCfuns
    RPS
    Relation
    Set
    Setup
    UseMonads
    CalcEval
    CalcParse
    CalcParseLib
    CalcStore
    CalcToplevel
    CalcTypes
    Ant
    Bee
    CodeTable
    Coding
    Cow
    Doe
    Frequency
    Main
    MakeCode
    MakeTree
    Test
    Types
    QCStoreTest
    Queues1
    Queues2
    Queues3
    Store
    StoreFun
    StoreTest
    Tree
    UseStore
    UseStoreFun
    UseTree
    QC
    RegExp
    Base
    QueueState
    RandomGen
    ServerState
    TopLevelServe  

  other-modules:


  hs-source-dirs: . ./Calculator ./Chapter15 ./Chapter16 ./Chapter19 ./Simulation  ./Chapter20

executable performanceI
  main-is:     PerformanceI.hs
  hs-source-dirs: ./Chapter20
  default-language: Haskell2010
  build-depends:
    base >= 4 && < 5,
    Craft3e


executable performanceIA
  main-is:     PerformanceIA.hs
  hs-source-dirs: ./Chapter20
  default-language: Haskell2010
  build-depends:
    base >= 4 && < 5,
    Craft3e

executable performanceIS
  main-is:     PerformanceIS.hs
  hs-source-dirs: ./Chapter20
  default-language: Haskell2010
  build-depends:
    base >= 4 && < 5,
    Craft3e

